# personal-os

./: .gitignore  AGENTS.md  AI_DEVELOPMENT_GUIDE.md  ARCHITECTURE.md  CONTRIBUTING.md  PROJECT.md  README.md  ROADMAP.md  VISION.md  docker-compose.yml  personal-os-final-structure.ps1
apps/mobile/: README.md
apps/web/: README.md
backend/: README.md
docs/: 01-vision.md  02-system-architecture.md  03-plugin-sdk.md  04-agent-framework.md  05-memory.md  06-event-model.md  07-decision-engine.md  08-api.md  09-database.md  12-roadmap.md  13-IMPLEMENTATION_GUIDE.md  MODULE_SDK.md  WORKFLOW_ENGINE.md
docs/agents/: AGENTS.md
docs/architecture/: AI_DEVELOPMENT_GUIDE.md  ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  PROJECT.md  VISION.md
docs/decisions/: DECISION_ENGINE.md  DECISION_RULES.md
docs/diagrams/: 00-system-overview.drawio  01-component-model.drawio  02-kernel-runtime.drawio  03-component-lifecycle.drawio  04-capability-registry.drawio  05-event-runtime.drawio  06-memory-runtime.drawio  07-knowledge-runtime.drawio  (+10 more)
infrastructure/: README.md
plugins/: PLUGIN_SDK.md
scripts/: bootstrap-docs.ps1
tools/personal-os-cli/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
tools/personal-os-cli/personal_os_cli/: __init__.py  config.py  constants.py  main.py  models.py  utils.py
tools/personal-os-cli/personal_os_cli/commands/: __init__.py  build.py  doctor.py  generate.py  init.py  new.py  validate.py  version.py
tools/personal-os-cli/personal_os_cli/generators/: __init__.py
tools/personal-os-cli/tests/: __init__.py
workflows/: README.md
(+12 files in other folders)
