[project]
name = "personal-os-cli"
version = "0.1.0"
description = "Official command-line interface for the Personal OS ecosystem."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Personal OS Maintainers" }
]
keywords = ["personal-os", "cli", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "jinja2>=3.1.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
]

[project.scripts]
personal-os = "personal_os_cli.main:app"

[dependency-groups]
dev = [
  "black>=24.0.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "--cov=personal_os_cli --cov-report=term-missing"
testpaths = ["tests"]
